# rss-feeder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
k8s/: app_deployment.yml  app_service.yml  configmap.yml  cronjob.yml  deployment_app.yml  deployment_postgres.yml  persistent_volume.yml  persistent_volume_claim.yml  postgres_deployment.yml  postgres_service.yml  pv.yml  pvc.yml  service_app.yml  service_postgres.yml  services.yml
src/rss-pocket-feeder/: main.py
src/rss-pocket-feeder/db/: feeds.py
src/rss-pocket-feeder/models/: __init__.py
src/rss-pocket-feeder/pocket/: __init__.py
src/rss-pocket-feeder/rss/: __init__.py
src/rss-pocket-feeder/settings/: __init__.py
src/rss-pocket-feeder/static/: index.html  styles.css
